# Cpp-Playground

./: .gitignore  CMakeLists.txt  README.md
CMake/: set_compiler_flags.cmake
include/: CMakeLists.txt  cli_actions.hxx  cli_template_app.hxx  common.hxx  common.hxx.in  hello_world_strategy.hxx
src/: CMakeLists.txt  cli_app.cxx  cli_template_app.cxx  hello_world_strategy.cxx  stat_demo.cxx
tests/: CMakeLists.txt  dummy_test.cxx  hello_test.cpp
